--- a/production/imports/ui/pages/firstTime.html
+++ b/production/imports/ui/pages/firstTime.html
@@ -1,6 +1,7 @@
 <template name="firstTime">
-    <div class="image-container full-height" style="background-image: url('http://demos.creative-tim.com/material-bootstrap-wizard/assets/img/wizard-book.jpg')">
-        <div class="container">
+    <div class="image-container full-height" style="background-image: url('/img/home-bg.jpg')">
+        {{#if isInRole 'teacher'}}
+            <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <div class="wizard-container">
@@ -82,6 +83,92 @@
                 </div>
             </div>
         </div>
+        {{else}}
+            <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <div class="wizard-container">
+                        <div class="card">
+                            <div class="card-head">
+                                <div id="firstIntro">
+                                    <h2>Hello There!</h2>
+                                    <p>Thank you for joining uhs.life! Since it's your first time here, we would like to know some things about you, it's really short!</p>
+                                </div>
+                                <div id="teachIntro" hidden>
+                                    <h2>Do you teach any courses and supervise any clubs?</h2>
+                                    <p>
+                                        Selecting these will help us build your profile, if you don't have any or prefer not to tell simply click skip.
+                                    </p>
+                                </div>
+                                <div id="emailIntro" hidden>
+                                    <h2>Newsletter subscription</h2>
+                                    <p>
+                                        Uhs.life offers a weekly news summary, on everything UHS related. Why not subscribe to it? <br> If you check your gapps account often, simply click "Join
+                                        The Club", or if you prefer to receive the news letter on your personal email, simply tell us the address using the box bellow.
+                                    </p>
+                                </div>
+                                <div id="confirmIntro" hidden>
+                                    <h2>Just one more step...</h2>
+                                    <p>
+                                        We are almost done here, why not give yourself a tag line, this will appear under your name in a story post. Then confirm the information bellow, and agree to the Terms of Service of uhs.life.
+                                    </p>
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="card-body">
+                                <div class="info-form" id="beginIntro">
+                                    <a href="" class="btn btn-lg btn-login" id="startFirst">
+                                        Let's go!
+                                    </a>
+                                </div>
+                                <div class="info-form" id="teachAssistInfo" hidden>
+                                    <form class="select-organizations" id="organizationsForm">
+                                        <div class="form-group mb-15">
+                                            <label for="firstCourseSelect">What Courses do you teach?</label>
+                                            <select name="category-selector" class="category-select " id="firstCourseSelect" multiple style="width: 60%"></select>
+                                        </div>
+                                        <div class="form-group mb-15">
+                                            <label for="firstClubSelect">What Clubs do you supervise?</label>
+                                            <select name="category-selector" class="category-select mb-15" id="firstClubSelect" multiple style="width: 60%"></select>
+                                        </div>
+                                        <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="Confirm">
+                                    </form>
+                                    <span>I would like to <a href="" id="skipNext">skip</a></span>
+                                </div>
+                                <div class="info-form" id="subscriptionEmail" hidden>
+                                    <form id="newsletterEmailForm">
+                                        <input type="email" placeholder="Your Email" id="personalEmail">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else or spam you. Read more about our privacy policy.</small>
+                                        <input type="submit" class="btn btn-primary btn-lg btn-login mb-15" value="Join the club">
+                                        <span>No, I do not want weekly briefing, please <a href="" id="skipEmail">skip</a></span>
+                                    </form>
+                                </div>
+                                <div class="info-form" id="confirmDetails" hidden>
+                                    <form class="form" id="finalForm">
+                                        <label for="introName">Your Name</label>
+                                        <input type="text" id="introName" disabled>
+                                        <label for="introTagLine">Tag line: max 25 characters</label>
+                                        <input type="text" id="introTagLine" placeholder="'English Teacher, Thrill lover', 'I love uhs' ...">
+                                        <label for="introSubEmail">The email that we will be sending news letters to</label>
+                                        <input type="email" id="introSubEmail" disabled>
+                                        <div class="form-group">
+                                            <input type='checkbox' class='ios8-switch' id='checkboxTerms'>
+                                            <label for='checkboxTerms'>I have read and agreed with the Terms of Service</label>
+                                        </div>
+                                        <input type="submit" class="btn btn-lg btn-login" value="Confirm">
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="final-message" hidden>
+                        <h1>Thank You!</h1>
+                        <h2>We are now redirecting you back to your stream!</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {{/ if}}
     </div>
 
 </template>
